src/App.css
@import "tailwindcss";

#root {
  max-width: 1000px;
  margin: 0 auto;
}

h1 {
  font-size: 3rem;
  font-weight: 600; 
}

h2 {
  @apply text-slate-800 italic text-2xl mb-4 font-bold;
}

h3 {
  @apply text-slate-900 font-bold text-xl;
}

p {
  @apply text-slate-900 mb-4;
}

ul {
  @apply list-disc list-outside mb-4 ml-3.5; 
}

.link {
  cursor: pointer;
  @apply text-slate-500 hover:text-slate-500 underline;
}

.clickable {
  cursor: pointer;
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 2em;
}

.read-the-docs {
  color: #888;
}

